yaml/k8s/deploy_hs.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hs
  namespace: dev-ithome
spec:
  selector:
    matchLabels:
      app: hs
  replicas: 1
  template:
    metadata:
      labels:
        app: hs
    spec:
      containers:
      - name: hs
        image: gcr.io/xxxxx/myhttpserver:v1.0.1
        imagePullPolicy: Always
        ports:
        - name: hs-port
          containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
