yaml/k8s/service_gs.yaml
apiVersion: v1
kind: Service
metadata:
  name: gs
  namespace: dev-ithome
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP 
  selector:
    app: gs
