yaml/k8s/service_ingress_hs.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hs-ingress
  namespace: dev-ithome  
  annotations:
    kubernetes.io/ingress.global-static-ip-name: test-static-ip
spec:
  rules:
  - host: xxx.xxx.xxx
    http:
      paths:
      - backend:
          serviceName: hs-backend
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hs-backend
  namespace: dev-ithome
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP 
  selector:
    app: hs
